linked css style sheet

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
       href="./assets/favicon-32x32.png"
       type="image/x-icon"
     />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Dale Bendixen || Developer</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Hello World</h1>
+  </body>
 </html>
