--- a/index.html
+++ b/index.html
@@ -18,7 +18,5 @@
     <link rel="stylesheet" href="./styles.css" />
     <title>Dale Bendixen || Developer</title>
   </head>
-  <body>
-    <h1>Hello World</h1>
-  </body>
+  <body></body>
 </html>
