--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
     <link rel="stylesheet" href="./styles.css" />
     <title>Dale Bendixen || Developer</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div class="hero"></div>
+    </main>
+  </body>
 </html>
