--- a/index.html
+++ b/index.html
@@ -15,12 +15,26 @@
       href="./assets/favicon-32x32.png"
       type="image/x-icon"
     />
+    <!-- FONT AWESOME -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="./styles.css" />
     <title>Dale Bendixen || Developer</title>
   </head>
   <body>
     <main>
-      <div class="hero"></div>
+      <div class="main-image"></div>
+      <nav class="nav">
+        <i class="fa-brands fa-html5"></i>
+        <i class="fa-brands fa-css3"></i>
+        <i class="fa-brands fa-square-js"></i>
+        <i class="fa-brands fa-bootstrap"></i>
+        <i class="fa-brands fa-react"></i>
+        <i class="fa-brands fa-python"></i>
+        <i class="fa-solid fa-database"></i>
+      </nav>
     </main>
   </body>
 </html>
