--- a/index.html
+++ b/index.html
@@ -25,16 +25,17 @@
   </head>
   <body>
     <main>
-      <div class="main-image"></div>
-      <nav class="nav">
-        <i class="fa-brands fa-html5"></i>
-        <i class="fa-brands fa-css3"></i>
-        <i class="fa-brands fa-square-js"></i>
-        <i class="fa-brands fa-bootstrap"></i>
-        <i class="fa-brands fa-react"></i>
-        <i class="fa-brands fa-python"></i>
-        <i class="fa-solid fa-database"></i>
-      </nav>
+      <div class="main-image">
+        <nav class="nav">
+          <i class="fa-brands fa-html5"></i>
+          <i class="fa-brands fa-css3"></i>
+          <i class="fa-brands fa-square-js"></i>
+          <i class="fa-brands fa-bootstrap"></i>
+          <i class="fa-brands fa-react"></i>
+          <i class="fa-brands fa-python"></i>
+          <i class="fa-solid fa-database"></i>
+        </nav>
+      </div>
     </main>
   </body>
 </html>
