redesign of main page and styles

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
   <body>
     <main>
       <div class="main-image">
+        <img
+          src="./assets/portfolio-header-img.jpg"
+          alt="photo of Dale Bendixen"
+        />
         <nav class="nav">
           <i class="fa-brands fa-html5"></i>
           <i class="fa-brands fa-css3"></i>
