added github and about me icons to navbar

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
           <i class="fa-brands fa-react"></i>
           <i class="fa-brands fa-python"></i>
           <i class="fa-solid fa-database"></i>
+          <i class="fa-brands fa-github"></i>
+          <i class="fa-solid fa-id-card-clip"></i>
         </nav>
       </div>
     </main>
