--- a/index.html
+++ b/index.html
@@ -31,15 +31,36 @@
           alt="photo of Dale Bendixen"
         />
         <nav class="nav">
-          <i class="fa-brands fa-html5"></i>
-          <i class="fa-brands fa-css3"></i>
-          <i class="fa-brands fa-square-js"></i>
-          <i class="fa-brands fa-bootstrap"></i>
-          <i class="fa-brands fa-react"></i>
-          <i class="fa-brands fa-python"></i>
-          <i class="fa-solid fa-database"></i>
-          <i class="fa-brands fa-github"></i>
-          <i class="fa-solid fa-id-card-clip"></i>
+          <a href="./html.html">
+            <i class="fa-brands fa-html5"></i>
+          </a>
+          <a href="./css.html">
+            <i class="fa-brands fa-css3"></i>
+          </a>
+          <a href="./javascript.html">
+            <i class="fa-brands fa-square-js"></i>
+          </a>
+          <a href="./bootstrap.html">
+            <i class="fa-brands fa-bootstrap"></i>
+          </a>
+          <a href="./react.html">
+            <i class="fa-brands fa-react"></i>
+          </a>
+          <a href="./python.html">
+            <i class="fa-brands fa-python"></i>
+          </a>
+          <a href="./database.html">
+            <i class="fa-solid fa-database"></i>
+          </a>
+          <a href="https://github.com/Irond76" target="_blank">
+            <i class="fa-brands fa-github"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/dale-bendixen/" target="_blank">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a href="./about.html">
+            <i class="fa-solid fa-id-card-clip"></i>
+          </a>
         </nav>
       </div>
     </main>
