--- a/html.html
+++ b/html.html
@@ -24,6 +24,49 @@
     <title>Dale Bendixen || HTML</title>
   </head>
   <body>
-    <h1>This is Html Page</h1>
+    <main>
+      <br />
+      <div class="main-image">
+        <img
+          src="./assets/web-development-fundamentals-bootcamp.jpg"
+          alt="photo of Dale Bendixen"
+        />
+        <nav class="nav">
+          <!-- <a href="./html.html">
+            <i class="fa-brands fa-html5"></i>
+          </a> -->
+          <a href="./javascript.html">
+            <i class="fa-brands fa-square-js"></i>
+          </a>
+          <a href="./css.html">
+            <i class="fa-brands fa-css3"></i>
+          </a>
+          <a href="./bootstrap.html">
+            <i class="fa-brands fa-bootstrap"></i>
+          </a>
+          <a href="./react.html">
+            <i class="fa-brands fa-react"></i>
+          </a>
+          <a href="./python.html">
+            <i class="fa-brands fa-python"></i>
+          </a>
+          <a href="./database.html">
+            <i class="fa-solid fa-database"></i>
+          </a>
+          <a href="https://github.com/Irond76" target="_blank">
+            <i class="fa-brands fa-github"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/dale-bendixen/" target="_blank">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a href="./about.html">
+            <i class="fa-solid fa-id-card-clip"></i>
+          </a>
+          <a href="./index.html">
+            <i class="fa-solid fa-house"></i>
+          </a>
+        </nav>
+      </div>
+    </main>
   </body>
 </html>
