Finished about me section

--- a/about.html
+++ b/about.html
@@ -24,6 +24,99 @@
     <title>Dale Bendixen || ABOUT ME</title>
   </head>
   <body>
-    <h1>ABOUT ME PAGE</h1>
+    <main>
+      <div class="main-image">
+        <h1>ABOUT</h1>
+        <hr>
+        <br>
+        <p> My name is Dale Bendixen, I'm an enthusiastic  Developer. I was born and raised in beautiful Portland Maine, before moving to charming Boise, Idaho; where I raised my three children and started my two businesses. My Property Maintenance company focused primarily on commercial properties in and around the Boise area. With Bendixen Photography I was able to cater more towards my creative side, providing a wide range of services such as: family and high-school graduation portraits, head shots for corporate accounts and real-estate photography. I enjoyed challenging myself learning Adobe Photoshop, Adobe Premier Pro, videography as well as astrophotography. I'm a self-taught musician, singer/song-writer playing the acoustic/electric guitar, piano and drums. Music is a great love of mine. I've writen, performed and produced my own album in my home studio. As an experienced business owner and seasoned professional I bring an array of knowledge to my Tech Developing career. I have such a passion for the technologies industry that I closed down my successful business to dedicate all of my energy towards Full Stack Developing.</p>
+        <br>
+        <h1>EDUCATION</h1>
+        <hr>
+        <br>
+        <h2>Nucamp:</h2>
+        <p>Back-End SQL, and DevOps with Python
+          Technologies: Python, SQL
+          Gradutated: 2021
+          <br></p>
+          <br>
+          <h2>Nucamp:</h2>
+          <p>Web Development Fundamentals
+            Technologies: HTML, CSS, Javascript
+            Gradutated: 2021
+            <br></p>
+          <br>
+          <h2>Nucamp:</h2>
+          <p>Front-End Web and Mobile Development
+            Technologies: Bootstrap, React, React-Native
+            Gradutated: 2022</p>
+            <br>
+          <h1>Currently Enrolled In Several Udemy Courses:</h1>
+          <br>
+          <p>Html <br>
+            CSS <br>
+            Javascript <br>
+            React <br>
+            React-Native <br>
+            Node Express <br>
+            Mern Full Stack Course</p>
+            <br>
+        <h1>WORK HISTORY</h1>
+        <hr>
+        <br>
+        <p> LIGHTHOUSE MAINTENANCE L.L.C
+          <br>
+          <br>
+          BENDIXEN PHOTOGRAPHY
+          <br>
+          <br>
+          20 YEAR CNC MACHINIST, (program, set-up, operate)
+          <br>
+          SEVERAL YEARS AS SHOP SUPERVISOR
+          <br></p>
+          <br>
+      </div>
+      <!-- <div class="main-image">
+        <img
+          src="./assets/portfolio-header-img.jpg"
+          alt="photo of Dale Bendixen"
+        /> -->
+        <nav class="nav">
+          <a href="./html.html">
+            <i class="fa-brands fa-html5"></i>
+          </a>
+          <a href="./javascript.html">
+            <i class="fa-brands fa-square-js"></i>
+          </a>
+          <a href="./css.html">
+            <i class="fa-brands fa-css3"></i>
+          </a>
+          <a href="./bootstrap.html">
+            <i class="fa-brands fa-bootstrap"></i>
+          </a>
+          <a href="./react.html">
+            <i class="fa-brands fa-react"></i>
+          </a>
+          <a href="./python.html">
+            <i class="fa-brands fa-python"></i>
+          </a>
+          <a href="./database.html">
+            <i class="fa-solid fa-database"></i>
+          </a>
+          <a href="https://github.com/Irond76" target="_blank">
+            <i class="fa-brands fa-github"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/dale-bendixen/" target="_blank">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <!-- <a href="./about.html">
+            <i class="fa-solid fa-id-card-clip"></i>
+          </a> -->
+          <a href="./index.html">
+            <i class="fa-solid fa-house"></i>
+          </a>
+        </nav>
+      </div>
+    </main>
   </body>
 </html>
