--- a/about.html
+++ b/about.html
@@ -31,6 +31,12 @@
         <br>
         <p> My name is Dale Bendixen, I'm an enthusiastic  Developer. I was born and raised in beautiful Portland Maine, before moving to charming Boise, Idaho; where I raised my three children and started my two businesses. My Property Maintenance company focused primarily on commercial properties in and around the Boise area. With Bendixen Photography I was able to cater more towards my creative side, providing a wide range of services such as: family and high-school graduation portraits, head shots for corporate accounts and real-estate photography. I enjoyed challenging myself learning Adobe Photoshop, Adobe Premier Pro, videography as well as astrophotography. I'm a self-taught musician, singer/song-writer playing the acoustic/electric guitar, piano and drums. Music is a great love of mine. I've writen, performed and produced my own album in my home studio. As an experienced business owner and seasoned professional I bring an array of knowledge to my Tech Developing career. I have such a passion for the technologies industry that I closed down my successful business to dedicate all of my energy towards Full Stack Developing.</p>
         <br>
+        <h1>CURRENT RESIDENCE</h1>
+        <hr>
+        <br>
+        <h2>Raleigh/Durham</h2>
+        <h3>North Carolina, United States</h3>
+        <br>
         <h1>EDUCATION</h1>
         <hr>
         <br>
