Added projects section with links

--- a/projects.html
+++ b/projects.html
@@ -21,15 +21,29 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
     <link rel="stylesheet" href="./styles.css" />
-    <title>Dale Bendixen || Developer</title>
+    <title>Dale Bendixen || Projects</title>
   </head>
   <body>
     <main>
-      <div class="main-image">
+      <div class="main-image-links">
+        <a href="https://fantastic-counter.netlify.app/" target="_blank" class="counter">
+            <i class="fa-solid fa-calculator"></i>Fantastic-Counter</a>
+            <p class="text">Nice little counter with an added touch!</p>
+        <br>
+        <a href="https://grid-mini-project-1.netlify.app/" target="_blank" class="grid">
+            <i class="fa-solid fa-table-cells-large"></i>Grid-Mini-Project</a>
+            <p class="text">Grid Layout Project!</p>
+        <br>
+        <a href="https://react-materialui-project1.netlify.app/" class="react" target="_blank">
+            <i class="fa-brands fa-react"></i>React-Material-ui</a>
+            <p class="text">Material ui, desktop only</p>
+        <br>
+      </div>
+      <!-- <div class="main-image">
         <img
           src="./assets/portfolio-header-img.jpg"
           alt="photo of Dale Bendixen"
-        />
+        /> -->
         <nav class="nav">
           <a href="./html.html">
             <i class="fa-brands fa-html5"></i>
@@ -58,14 +72,15 @@
           <a href="https://www.linkedin.com/in/dale-bendixen/" target="_blank">
             <i class="fa-brands fa-linkedin"></i>
           </a>
-          <a href="./about.html">
+          <!-- <a href="./about.html">
             <i class="fa-solid fa-id-card-clip"></i>
-          </a>
-          <a href="./projects.html">
-            <i class="fa-solid fa-diagram-project">projects</i>
+          </a> -->
+          <a href="./index.html">
+            <i class="fa-solid fa-house"></i>
           </a>
         </nav>
       </div>
     </main>
   </body>
 </html>
+
